Fixed a CSS issue where the layout on the default BackendPro public welcome page would not show a scrollbar, Closes #88
git-svn-id: http://subversion.assembla.com/svn/backendpro/trunk@210 eb1981d6-d9b1-d44f-b3a1-a14e2883e594

--- a/assets/public/css/layout.css
+++ b/assets/public/css/layout.css
@@ -4,13 +4,9 @@ body {
 }
 
 #wrapper {
-    position: absolute;
     background-color: #FFF;
     width: 800px;
-    top: 50%;
-    left: 50%;
-    margin-left: -400px;
-    margin-top: -300px;
+    margin: 100px auto auto auto;
     padding: 2em;
     border: 1px solid #808080;
 }
